Fix styles for Processing

--- a/sass/overrides/_index.scss
+++ b/sass/overrides/_index.scss
@@ -283,9 +283,10 @@ a.scroll-button:hover > span {
 /*-------------------- Processing --------------------*/
 
 .processing-canvas {
-	width: 400px;
+	//width: 400px;
 	margin: auto;
 	display: block;
+	padding: 5px;
 }
 
 /*-------------------- End Processing --------------------*/
