--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,5 @@ CSS created by Florence Wong :);
 @import "elements/index"; // unclassed HTML elements: body, p, a
 @import "site/index"; // what's on every page: header, footer, etc.
 //@import "objects/index"; // cosmetic-free design patters: e.g. page-header, page-footer, woman-card
-@import "page/index";
-//@import "components/index"; // designed components, chunks of UI: e.g. jump, feature-section, feature-list, page-body, base-link
+@import "components/index"; // designed components, chunks of UI: e.g. jump, feature-section, feature-list, page-body, base-link
 @import "overrides/index"; // helpers and overrides (ideally empty)
