Separate text styles to different sass

--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ ul.media li a.contact_icon:hover {
   background-attachment: fixed; }
 
 /*--------------------For text layout--------------------*/
-/* line 5, ../sass/overrides/_index.scss */
+/* line 3, ../sass/components/_text.scss */
 .main-text {
   width: 552px;
   min-width: 232px;
@@ -680,7 +680,7 @@ ul.media li a.contact_icon:hover {
   color: #545454; }
 
 @media only screen and (min-width: 815px) {
-  /* line 17, ../sass/overrides/_index.scss */
+  /* line 15, ../sass/components/_text.scss */
   .main-text {
     width: 66%;
     max-width: 600px;
@@ -688,11 +688,11 @@ ul.media li a.contact_icon:hover {
 /*--------------------End text layout--------------------*/
 /*-------------------- BUTTONS --------------------*/
 /*-------------------- Toggle --------------------*/
-/* line 33, ../sass/overrides/_index.scss */
+/* line 7, ../sass/overrides/_index.scss */
 a.toggle-description:hover > img {
   opacity: 0.7; }
 
-/* line 37, ../sass/overrides/_index.scss */
+/* line 11, ../sass/overrides/_index.scss */
 a.toggle-description {
   cursor: pointer; }
 
@@ -736,7 +736,7 @@ a.toggle-description-button {
 
 	*/
 /*-------------------- Scroll Buttons --------------------*/
-/* line 86, ../sass/overrides/_index.scss */
+/* line 60, ../sass/overrides/_index.scss */
 a.scroll-button {
   /* !!! also, only show this with the horizontal gallery */
   position: absolute;
@@ -753,16 +753,16 @@ a.scroll-button {
   padding: 30px;
   background-color: rgba(1, 1, 1, 0.1); }
 
-/* line 102, ../sass/overrides/_index.scss */
+/* line 76, ../sass/overrides/_index.scss */
 a.scroll-left, a.scroll-right {
   top: 50%;
   /* consider making all scroll buttons at bottom */ }
 
-/* line 106, ../sass/overrides/_index.scss */
+/* line 80, ../sass/overrides/_index.scss */
 a.scroll-right {
   right: 15px; }
 
-/* line 110, ../sass/overrides/_index.scss */
+/* line 84, ../sass/overrides/_index.scss */
 a.scroll-down {
   bottom: 0;
   -webkit-transform: translateY(-36px);
@@ -771,7 +771,7 @@ a.scroll-down {
   -o-transform: translateY(-36px);
   transform: translateY(-36px); }
 
-/* line 119, ../sass/overrides/_index.scss */
+/* line 93, ../sass/overrides/_index.scss */
 a.scroll-button span {
   position: absolute;
   float: right;
@@ -788,7 +788,7 @@ a.scroll-button span {
   -o-transition: all .5s ease;
   transition: all .5s ease; }
 
-/* line 137, ../sass/overrides/_index.scss */
+/* line 111, ../sass/overrides/_index.scss */
 a.scroll-left span {
   right: 20%;
   -webkit-transform: rotate(45deg);
@@ -797,7 +797,7 @@ a.scroll-left span {
   -o-transform: rotate(45deg);
   transform: rotate(45deg); }
 
-/* line 146, ../sass/overrides/_index.scss */
+/* line 120, ../sass/overrides/_index.scss */
 a.scroll-right span {
   right: 40%;
   -webkit-transform: rotate(-135deg);
@@ -806,7 +806,7 @@ a.scroll-right span {
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg); }
 
-/* line 155, ../sass/overrides/_index.scss */
+/* line 129, ../sass/overrides/_index.scss */
 a.scroll-down span {
   top: 20%;
   right: 28%;
@@ -816,7 +816,7 @@ a.scroll-down span {
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg); }
 
-/* line 165, ../sass/overrides/_index.scss */
+/* line 139, ../sass/overrides/_index.scss */
 a.scroll-button:hover > span {
   border-left: 1px solid orange;
   border-bottom: 1px solid orange;
@@ -824,32 +824,32 @@ a.scroll-button:hover > span {
   find out what causes this line color */ }
 
 /*--------------------random effects on About page--------------------*/
-/* line 176, ../sass/overrides/_index.scss */
+/* line 150, ../sass/overrides/_index.scss */
 .random, .random2, .showing_off, .whoa {
   color: #545454; }
 
-/* line 180, ../sass/overrides/_index.scss */
+/* line 154, ../sass/overrides/_index.scss */
 .random:hover, .random2:hover, .showing_off:hover {
   font-size: 30px;
   font-family: Futura; }
 
-/* line 184, ../sass/overrides/_index.scss */
+/* line 158, ../sass/overrides/_index.scss */
 p:hover .random {
   color: #1e45c8; }
 
-/* line 188, ../sass/overrides/_index.scss */
+/* line 162, ../sass/overrides/_index.scss */
 p:hover .random2 {
   color: #32c814; }
 
-/* line 192, ../sass/overrides/_index.scss */
+/* line 166, ../sass/overrides/_index.scss */
 p:hover .showing_off {
   color: #c826fa; }
 
-/* line 196, ../sass/overrides/_index.scss */
+/* line 170, ../sass/overrides/_index.scss */
 span.whoa:hover {
   font-style: bold; }
 
-/* line 200, ../sass/overrides/_index.scss */
+/* line 174, ../sass/overrides/_index.scss */
 span.secret {
   display: none;
   -webkit-transition: all 1s ease;
@@ -858,14 +858,14 @@ span.secret {
   -o-transition: all 1s ease;
   transition: all 1s ease; }
 
-/* line 209, ../sass/overrides/_index.scss */
+/* line 183, ../sass/overrides/_index.scss */
 span.whoa:hover span.secret {
   display: inline;
   font-family: Futura; }
 
 /*--------------------end random effects on About page--------------------*/
 /*--------------------contact--------------------*/
-/* line 218, ../sass/overrides/_index.scss */
+/* line 192, ../sass/overrides/_index.scss */
 #contact-filler {
   float: center;
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
@@ -876,35 +876,35 @@ span.whoa:hover span.secret {
   background-attachment: fixed;
   color: #fafafa; }
 
-/* line 229, ../sass/overrides/_index.scss */
+/* line 203, ../sass/overrides/_index.scss */
 #contact-filler h2, #contact-filler .main-text {
   color: #fafafa; }
 
-/* line 233, ../sass/overrides/_index.scss */
+/* line 207, ../sass/overrides/_index.scss */
 #contact-filler .contact-form__container {
   padding: 10px 0;
   text-align: right; }
 
-/* line 238, ../sass/overrides/_index.scss */
+/* line 212, ../sass/overrides/_index.scss */
 #contact-filler .contact-form__form {
   width: 90%; }
 
 /* media query for contact-form:
 		under width: 485, have on separate rows
  		over width: 485, have on same row */
-/* line 245, ../sass/overrides/_index.scss */
+/* line 219, ../sass/overrides/_index.scss */
 #contact-filler .contact_icon {
   color: white;
   padding: 5px;
   font-size: 26px; }
 
-/* line 251, ../sass/overrides/_index.scss */
+/* line 225, ../sass/overrides/_index.scss */
 #contact-filler .contact_icon:hover {
   color: orange; }
 
 /*--------------------end contact--------------------*/
 /*-------------------- Processing --------------------*/
-/* line 258, ../sass/overrides/_index.scss */
+/* line 232, ../sass/overrides/_index.scss */
 .processing-canvas {
   margin: auto;
   display: block;
@@ -912,31 +912,31 @@ span.whoa:hover span.secret {
 
 /*-------------------- End Processing --------------------*/
 /* Read More button: from http://cssdeck.com/labs/css-only-showhide */
-/* line 271, ../sass/overrides/_index.scss */
+/* line 245, ../sass/overrides/_index.scss */
 article {
   /*margin-bottom: 3rem;*/
   position: relative;
   *zoom: 1; }
 
-/* line 277, ../sass/overrides/_index.scss */
+/* line 251, ../sass/overrides/_index.scss */
 article:before, article:after {
   content: "";
   display: table; }
 
-/* line 282, ../sass/overrides/_index.scss */
+/* line 256, ../sass/overrides/_index.scss */
 article:after {
   clear: both; }
 
-/* line 284, ../sass/overrides/_index.scss */
+/* line 258, ../sass/overrides/_index.scss */
 section:first-of-type {
   /*float: right;*/ }
 
-/* line 288, ../sass/overrides/_index.scss */
+/* line 262, ../sass/overrides/_index.scss */
 section:last-of-type {
   display: none;
   visibility: hidden; }
 
-/* line 293, ../sass/overrides/_index.scss */
+/* line 267, ../sass/overrides/_index.scss */
 section {
   -webkit-transition: .125s linear;
   -moz-transition: .125s linear;
@@ -944,11 +944,11 @@ section {
   -o-transition: .125s linear;
   transition: .125s linear; }
 
-/* line 301, ../sass/overrides/_index.scss */
+/* line 275, ../sass/overrides/_index.scss */
 section h3 {
   margin: 0; }
 
-/* line 305, ../sass/overrides/_index.scss */
+/* line 279, ../sass/overrides/_index.scss */
 input[type=checkbox] {
   border: 0;
   clip: rect(0 0 0 0);
@@ -959,7 +959,7 @@ input[type=checkbox] {
   padding: 0;
   position: absolute; }
 
-/* line 316, ../sass/overrides/_index.scss */
+/* line 290, ../sass/overrides/_index.scss */
 [for="read_more"] {
   position: absolute;
   bottom: -3rem;
@@ -974,28 +974,28 @@ input[type=checkbox] {
   -o-transition: all 1s ease;
   transition: all 1s ease; }
 
-/* line 331, ../sass/overrides/_index.scss */
+/* line 305, ../sass/overrides/_index.scss */
 [for="read_more"]:hover {
   background: rgba(30, 180, 200, 0.5);
   color: white; }
 
-/* line 336, ../sass/overrides/_index.scss */
+/* line 310, ../sass/overrides/_index.scss */
 [for="read_more"] span:last-of-type {
   display: none;
   visibility: hidden; }
 
-/* line 341, ../sass/overrides/_index.scss */
+/* line 315, ../sass/overrides/_index.scss */
 input[type=checkbox]:checked ~ section {
   display: block;
   visibility: visible;
   width: 100%; }
 
-/* line 347, ../sass/overrides/_index.scss */
+/* line 321, ../sass/overrides/_index.scss */
 input[type=checkbox]:checked ~ [for="read_more"] span:first-of-type {
   display: none;
   visibility: hidden; }
 
-/* line 352, ../sass/overrides/_index.scss */
+/* line 326, ../sass/overrides/_index.scss */
 input[type=checkbox]:checked ~ [for="read_more"] span:last-of-type {
   display: block;
   visibility: visible; }
