--- a/css/style.css
+++ b/css/style.css
@@ -823,257 +823,32 @@ a.scroll-button:hover > span {
   /* !!! background-color changes, but not "color".
   find out what causes this line color */ }
 
-/*-------------------- BUTTONS --------------------*/
-/*-------------------- Toggle --------------------*/
-/* line 7, ../sass/overrides/_index.scss */
-a.toggle-description:hover > img {
-  opacity: 0.7; }
-
-/* line 11, ../sass/overrides/_index.scss */
-a.toggle-description {
-  cursor: pointer; }
-
-/*
-a.toggle-description-button {
-	position: absolute;
-	z-index: 2;
-	top: 50%;
-	-webkit-transform: translateY(-12px);
-	    -moz-transform: translateY(-12px);
-    	-ms-transform: translateY(-12px);
-    	-o-transform: translateY(-12px);
-		transform: translateY(-12px);
-	width: 24px;
-	height: 24px;
-	padding: 30px;
-	background-color: rgba(1,1,1,0.5);
-}
-	a.toggle-description-button span {
-		position: absolute;
-		top: 32%;
-		width: 24px;
-		height: 24px;
-		margin-left: -12px;
-		border-left: 1px solid white;
-		border-bottom: 1px solid white;
-
-		box-sizing: border-box;
-		    -webkit-transition: all .5s ease;
-	    	-moz-transition: all .5s ease;
-	    	-ms-transition: all .5s ease;
-	    	-o-transition: all .5s ease;
-	    	transition: all .5s ease;
-
-	    -webkit-transform: translateX(-36px);
-	    	-moz-transform: translateX(-36px);
-    		-ms-transform: translateX(-36px);
-    		-o-transform: translateX(-36px);
-			transform: translateX(-36px);
-	}
-
-	*/
-/*-------------------- Scroll Buttons --------------------*/
-/* line 60, ../sass/overrides/_index.scss */
-a.scroll-button {
-  /* !!! also, only show this with the horizontal gallery */
-  position: absolute;
-  z-index: 2;
-  /*float: right;*/
-  -webkit-transform: translateY(-12px);
-  /* half of height, so middle of button is in the middle of div */
-  -moz-transform: translateY(-12px);
-  -ms-transform: translateY(-12px);
-  -o-transform: translateY(-12px);
-  transform: translateY(-12px);
-  width: 24px;
-  height: 24px;
-  padding: 30px;
-  background-color: rgba(1, 1, 1, 0.1); }
-
-/* line 76, ../sass/overrides/_index.scss */
-a.scroll-left, a.scroll-right {
-  top: 50%;
-  /* consider making all scroll buttons at bottom */ }
-
-/* line 80, ../sass/overrides/_index.scss */
-a.scroll-right {
-  right: 15px; }
-
-/* line 84, ../sass/overrides/_index.scss */
-a.scroll-down {
-  bottom: 0;
-  -webkit-transform: translateY(-36px);
-  -moz-transform: translateY(-36px);
-  -ms-transform: translateY(-36px);
-  -o-transform: translateY(-36px);
-  transform: translateY(-36px); }
-
-/* line 93, ../sass/overrides/_index.scss */
-a.scroll-button span {
-  position: absolute;
-  float: right;
-  top: 32%;
-  width: 24px;
-  height: 24px;
-  margin-left: -12px;
-  border-left: 1px solid white;
-  border-bottom: 1px solid white;
-  box-sizing: border-box;
-  -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  -ms-transition: all .5s ease;
-  -o-transition: all .5s ease;
-  transition: all .5s ease; }
-
-/* line 111, ../sass/overrides/_index.scss */
-a.scroll-left span {
-  right: 20%;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg); }
-
-/* line 120, ../sass/overrides/_index.scss */
-a.scroll-right span {
-  right: 40%;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -ms-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg); }
-
-/* line 129, ../sass/overrides/_index.scss */
-a.scroll-down span {
-  top: 20%;
-  right: 28%;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg); }
-
-/* line 139, ../sass/overrides/_index.scss */
-a.scroll-button:hover > span {
-  border-left: 1px solid orange;
-  border-bottom: 1px solid orange;
-  /* !!! background-color changes, but not "color".
-  find out what causes this line color */ }
-
-/*--------------------random effects on About page--------------------*/
-/* line 150, ../sass/overrides/_index.scss */
-.random, .random2, .showing_off, .whoa {
-  color: #545454; }
-
-/* line 154, ../sass/overrides/_index.scss */
-.random:hover, .random2:hover, .showing_off:hover {
-  font-size: 30px;
-  font-family: Futura; }
-
-/* line 158, ../sass/overrides/_index.scss */
-p:hover .random {
-  color: #1e45c8; }
-
-/* line 162, ../sass/overrides/_index.scss */
-p:hover .random2 {
-  color: #32c814; }
-
-/* line 166, ../sass/overrides/_index.scss */
-p:hover .showing_off {
-  color: #c826fa; }
-
-/* line 170, ../sass/overrides/_index.scss */
-span.whoa:hover {
-  font-style: bold; }
-
-/* line 174, ../sass/overrides/_index.scss */
-span.secret {
-  display: none;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease; }
-
-/* line 183, ../sass/overrides/_index.scss */
-span.whoa:hover span.secret {
-  display: inline;
-  font-family: Futura; }
-
-/*--------------------end random effects on About page--------------------*/
-/*--------------------contact--------------------*/
-/* line 192, ../sass/overrides/_index.scss */
-#contact-filler {
-  float: center;
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
-  background: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  color: #fafafa; }
-
-/* line 203, ../sass/overrides/_index.scss */
-#contact-filler h2, #contact-filler .main-text {
-  color: #fafafa; }
-
-/* line 207, ../sass/overrides/_index.scss */
-#contact-filler .contact-form__container {
-  padding: 10px 0;
-  text-align: right; }
-
-/* line 212, ../sass/overrides/_index.scss */
-#contact-filler .contact-form__form {
-  width: 90%; }
-
-/* media query for contact-form:
-		under width: 485, have on separate rows
- 		over width: 485, have on same row */
-/* line 219, ../sass/overrides/_index.scss */
-#contact-filler .contact_icon {
-  color: white;
-  padding: 5px;
-  font-size: 26px; }
-
-/* line 225, ../sass/overrides/_index.scss */
-#contact-filler .contact_icon:hover {
-  color: orange; }
-
-/*--------------------end contact--------------------*/
-/*-------------------- Processing --------------------*/
-/* line 232, ../sass/overrides/_index.scss */
-.processing-canvas {
-  margin: auto;
-  display: block;
-  padding: 5px; }
-
-/*-------------------- End Processing --------------------*/
 /* Read More button: from http://cssdeck.com/labs/css-only-showhide */
-/* line 245, ../sass/overrides/_index.scss */
+/* line 150, ../sass/components/_buttons.scss */
 article {
   /*margin-bottom: 3rem;*/
   position: relative;
   *zoom: 1; }
 
-/* line 251, ../sass/overrides/_index.scss */
+/* line 156, ../sass/components/_buttons.scss */
 article:before, article:after {
   content: "";
   display: table; }
 
-/* line 256, ../sass/overrides/_index.scss */
+/* line 161, ../sass/components/_buttons.scss */
 article:after {
   clear: both; }
 
-/* line 258, ../sass/overrides/_index.scss */
+/* line 163, ../sass/components/_buttons.scss */
 section:first-of-type {
   /*float: right;*/ }
 
-/* line 262, ../sass/overrides/_index.scss */
+/* line 167, ../sass/components/_buttons.scss */
 section:last-of-type {
   display: none;
   visibility: hidden; }
 
-/* line 267, ../sass/overrides/_index.scss */
+/* line 172, ../sass/components/_buttons.scss */
 section {
   -webkit-transition: .125s linear;
   -moz-transition: .125s linear;
@@ -1081,11 +856,11 @@ section {
   -o-transition: .125s linear;
   transition: .125s linear; }
 
-/* line 275, ../sass/overrides/_index.scss */
+/* line 180, ../sass/components/_buttons.scss */
 section h3 {
   margin: 0; }
 
-/* line 279, ../sass/overrides/_index.scss */
+/* line 184, ../sass/components/_buttons.scss */
 input[type=checkbox] {
   border: 0;
   clip: rect(0 0 0 0);
@@ -1096,7 +871,7 @@ input[type=checkbox] {
   padding: 0;
   position: absolute; }
 
-/* line 290, ../sass/overrides/_index.scss */
+/* line 195, ../sass/components/_buttons.scss */
 [for="read_more"] {
   position: absolute;
   bottom: -3rem;
@@ -1111,30 +886,118 @@ input[type=checkbox] {
   -o-transition: all 1s ease;
   transition: all 1s ease; }
 
-/* line 305, ../sass/overrides/_index.scss */
+/* line 210, ../sass/components/_buttons.scss */
 [for="read_more"]:hover {
   background: rgba(30, 180, 200, 0.5);
   color: white; }
 
-/* line 310, ../sass/overrides/_index.scss */
+/* line 215, ../sass/components/_buttons.scss */
 [for="read_more"] span:last-of-type {
   display: none;
   visibility: hidden; }
 
-/* line 315, ../sass/overrides/_index.scss */
+/* line 220, ../sass/components/_buttons.scss */
 input[type=checkbox]:checked ~ section {
   display: block;
   visibility: visible;
   width: 100%; }
 
-/* line 321, ../sass/overrides/_index.scss */
+/* line 226, ../sass/components/_buttons.scss */
 input[type=checkbox]:checked ~ [for="read_more"] span:first-of-type {
   display: none;
   visibility: hidden; }
 
-/* line 326, ../sass/overrides/_index.scss */
+/* line 231, ../sass/components/_buttons.scss */
 input[type=checkbox]:checked ~ [for="read_more"] span:last-of-type {
   display: block;
   visibility: visible; }
 
 /* -------------------- end "Read More" styling --------------------*/
+/*--------------------contact--------------------*/
+/* line 3, ../sass/components/_contact.scss */
+#contact-filler {
+  float: center;
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
+  background: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/oil/selfportrait_4.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #fafafa; }
+
+/* line 14, ../sass/components/_contact.scss */
+#contact-filler h2, #contact-filler .main-text {
+  color: #fafafa; }
+
+/* line 18, ../sass/components/_contact.scss */
+#contact-filler .contact-form__container {
+  padding: 10px 0;
+  text-align: right; }
+
+/* line 23, ../sass/components/_contact.scss */
+#contact-filler .contact-form__form {
+  width: 90%; }
+
+/* media query for contact-form:
+		under width: 485, have on separate rows
+ 		over width: 485, have on same row */
+/* line 30, ../sass/components/_contact.scss */
+#contact-filler .contact_icon {
+  color: white;
+  padding: 5px;
+  font-size: 26px; }
+
+/* line 36, ../sass/components/_contact.scss */
+#contact-filler .contact_icon:hover {
+  color: orange; }
+
+/*--------------------end contact--------------------*/
+/*-------------------- Processing --------------------*/
+/* line 3, ../sass/components/_processing.scss */
+.processing-canvas {
+  margin: auto;
+  display: block;
+  padding: 5px; }
+
+/*-------------------- End Processing --------------------*/
+/*--------------------random effects on About page--------------------*/
+/* line 3, ../sass/overrides/_index.scss */
+.random, .random2, .showing_off, .whoa {
+  color: #545454; }
+
+/* line 7, ../sass/overrides/_index.scss */
+.random:hover, .random2:hover, .showing_off:hover {
+  font-size: 30px;
+  font-family: Futura; }
+
+/* line 11, ../sass/overrides/_index.scss */
+p:hover .random {
+  color: #1e45c8; }
+
+/* line 15, ../sass/overrides/_index.scss */
+p:hover .random2 {
+  color: #32c814; }
+
+/* line 19, ../sass/overrides/_index.scss */
+p:hover .showing_off {
+  color: #c826fa; }
+
+/* line 23, ../sass/overrides/_index.scss */
+span.whoa:hover {
+  font-style: bold; }
+
+/* line 27, ../sass/overrides/_index.scss */
+span.secret {
+  display: none;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease; }
+
+/* line 36, ../sass/overrides/_index.scss */
+span.whoa:hover span.secret {
+  display: inline;
+  font-family: Futura; }
+
+/*--------------------end random effects on About page--------------------*/
